--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,14 +3,22 @@ services:
   - redis:latest
   - postgres:latest
 
+include:
+  - project: 'ds_2/ci-templates'
+    ref: v0.1.3 # you can also use the branch name, or a SHA256 value
+    file: # you can add multiple files you need for your project
+      - '/templates/stages.yaml'
+      - '/templates/build-rust.yaml'
+
+
 # Optional: Install a C compiler, cmake and git into the container.
 # You will often need this when you (or any of your dependencies) depends on C code.
-# before_script:
-#   - apt-get update -yqq
-#   - apt-get install -yqq --no-install-recommends build-essential
+before_script:
+  - apt-get update -yqq
+  - apt-get install -yqq --no-install-recommends capnproto
 
 # Use cargo to test the project
-test:cargo:
-  script:
-    - rustc --version && cargo --version  # Print version info for debugging
-    - cargo test --workspace --verbose
+#test:cargo:
+#  script:
+#    - rustc --version && cargo --version  # Print version info for debugging
+#    - cargo test --workspace --verbose
