--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,18 @@
 image: "rust:latest"
-services:
-  - redis:latest
-  - postgres:latest
 
 include:
   - project: 'ds_2/ci-templates'
-    ref: v0.1.3 # you can also use the branch name, or a SHA256 value
-    file: # you can add multiple files you need for your project
+    ref: v0.1.3
+    file:
       - '/templates/stages.yaml'
       - '/templates/build-rust.yaml'
 
+ cache:
+   key: "${CI_COMMIT_REF_SLUG}" # the branch name
+   paths:
+     - target
+     - .cargo
 
-# Optional: Install a C compiler, cmake and git into the container.
-# You will often need this when you (or any of your dependencies) depends on C code.
 before_script:
   - apt-get update -yqq
   - apt-get install -yqq --no-install-recommends capnproto
-
-# Use cargo to test the project
-#test:cargo:
-#  script:
-#    - rustc --version && cargo --version  # Print version info for debugging
-#    - cargo test --workspace --verbose
