--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,11 @@ async-stream = "0.3"
 env_logger = "0.9"
 log = "0.4"
 capnp = "0.14.6"
+capnp-rpc = "0.14.1"
+prost = "0.10"
+protobuf = "2.27.1"
 
 [build-dependencies]
 capnpc = "0.14.7"
 capnp-futures = "0.14.1"
-capnp-rpc = "0.14.1"
+protoc-rust = "2.27.1"
