--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,12 @@ edition = "2021"
 build= "build.rs"
 
 [[bin]]
-name="nachtwacht-rust"
+name="nachtwacht-fe"
 path="src/main.rs"
+
+[[bin]]
+name="nachtwacht-http-check"
+path="src/http-check-bin.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
