--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,12 +23,7 @@ jobs:
           toolchain: stable
       - name: install Protocol Buffers
         run: |
-          sudo apt update
-          sudo apt install -y unzip
-          PROTOC_VERSION=$(curl -s "https://api.github.com/repos/protocolbuffers/protobuf/releases/latest" | grep -Po '"tag_name": "v\K[0-9.]+')
-          curl -Lo protoc.zip "https://github.com/protocolbuffers/protobuf/releases/latest/download/protoc-${PROTOC_VERSION}-linux-x86_64.zip"
-          sudo unzip -q protoc.zip bin/protoc -d /usr/local
-          sudo chmod a+x /usr/local/bin/protoc
+          apt-get install -yqq --no-install-recommends protobuf-compiler
           protoc --version
           rm -rf protoc.zip
       - run: cargo build --workspace
