--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,6 +5,8 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 20
+    commit-message:
+      prefix: "⬆"
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
@@ -16,3 +18,5 @@ updates:
       - "githubactions"
       - "updates"
     open-pull-requests-limit: 5
+    commit-message:
+      prefix: "⬆"
