--- a/models/Cargo.toml
+++ b/models/Cargo.toml
@@ -7,7 +7,8 @@ build= "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protobuf = "2"
+protobuf = "3.1.0"
 
 [build-dependencies]
-protoc-rust = "2"
+protobuf-codegen = "3.1.0"
+protoc-bin-vendored = "3.0.0"
