--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4.1.0"
 actix-files = "0.6.2"
-actix-session = "0.7.1"
+actix-session = {version="0.7.1", features=["cookie-session"]}
 log = "0.4.17"
 env_logger = "0.9.0"
 async-stream = "0.3.3"
