--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,12 +3,12 @@ repos:
     rev: v4.3.0
     hooks:
       - id: check-yaml
-      - id: end-of-file-fixer
+#      - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-added-large-files
       - id: check-toml
   - repo: https://github.com/doublify/pre-commit-rust
     rev: v1.0
     hooks:
-      # - id: fmt
+      - id: fmt
       - id: cargo-check
