🔧 set format for future branches
Also update docs.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,8 @@ repos:
       - id: trailing-whitespace
       - id: check-added-large-files
       - id: check-toml
+      - id: no-commit-to-branch
+        args: [ '--pattern', '^(?!((main|develop)|(((fix|feature)\/[a-z0-9][a-z0-9\-]{1,20}))$)).*' ]
   - repo: https://github.com/doublify/pre-commit-rust
     rev: v1.0
     hooks:
