⚗️ idea to add an agent
Idea is here to create a new n8w8 agent based on rust instead of Golang or C++.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["models", "frontend", "cli", "orm", "checks", "executor"]
+members = ["models", "frontend", "cli", "orm", "checks", "executor", "agent"]
