--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nachtwacht-models = { path = "../models" }
+log = "0.4.17"
+clap = { version = "3.2.22", features = ["derive"] }
+http_req = "0.8.1"
+env_logger = "0.9.0"
+daemonize = "0.4.1"
+chrono = "0.4.22"
