--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,3 +44,32 @@ jobs:
         name: build the workspace
       - run: cargo test --all-features --all-targets --workspace
         name: run unit tests
+
+  rpm:
+    name: generate RPM
+    runs-on: ubuntu-22.04
+    needs:
+      - build
+    steps:
+      - uses: actions/checkout@v3
+        name: checking out project
+      - uses: actions/cache@v3
+        name: install cache
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+        name: install latest stable rust toolchain
+      - name: install rpm generator
+        run: cargo install cargo-generate-rpm
+      - name: generate rpm
+        run: |
+          cd agent
+          cargo generate-rpm
