--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -2,6 +2,8 @@
 name = "nachtwacht-frontend"
 version = "0.1.0"
 edition = "2021"
+license = "AGPLv3"
+description = "This is the frontend webapp server to configure and inspect N8w8."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
