--- a/models/Cargo.toml
+++ b/models/Cargo.toml
@@ -3,6 +3,8 @@ name = "nachtwacht-models"
 version = "0.1.0"
 edition = "2021"
 build= "build.rs"
+license = "GPLv3"
+description = "This package contains all the models and APIs to deal with n8w8."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
