--- a/checks/Cargo.toml
+++ b/checks/Cargo.toml
@@ -2,6 +2,8 @@
 name = "nachtwacht-checks"
 version = "0.1.0"
 edition = "2021"
+license = "GPLv3"
+description = "This package contains the implementations for all tests."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
