--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -2,6 +2,7 @@
 name = "executor"
 version = "0.1.0"
 edition = "2021"
+license = "GPLv3"
 description="An executor to execute given tests at specific times."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
