--- a/orm/schema/001.yaml
+++ b/orm/schema/001.yaml
@@ -2,15 +2,136 @@ databaseChangeLog:
   - changeLogId: a0d927cf-1c42-44d8-bd76-f2b1d89c5b56
   - changeSet:
       id: 1
-      author: Liquibase
+      author: Lexxy
       changes:
         - createTable:
-            tableName: test_table
+            tableName: state
             columns:
               - column:
-                  name: test_column
-                  type: INT
+                  name: id
+                  type: serial
+                  constraints:
+                    nullable: false
+                    primaryKey: true
+              - column:
+                  name: name
+                  type: text
+                  constraints:
+                    nullable: false
+                    unique: true
+              - column:
+                  name: created
+                  type: timestamptz
+                  defaultValueComputed: "now()"
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created_by
+                  type: uuid
+                  constraints:
+                    nullable: false
+              - column:
+                  name: modified
+                  type: timestamptz
+              - column:
+                  name: modified_by
+                  type: uuid
+  - changeSet:
+      id: 2
+      author: Lexxy
+      changes:
+        - createTable:
+            tableName: accounts
+            columns:
+              - column:
+                  name: id
+                  type: uuid
                   constraints:
                     primaryKey: true
                     nullable: false
-                    tableName: test_table
+                    unique: true
+              - column:
+                  name: title
+                  type: text
+                  constraints:
+                    nullable: false
+              - column:
+                  name: email
+                  type: text
+                  constraints:
+                    nullable: false
+                    unique: true
+              - column:
+                  name: created
+                  type: timestamptz
+                  defaultValueComputed: "now()"
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created_by
+                  type: uuid
+                  constraints:
+                    nullable: false
+              - column:
+                  name: modified
+                  type: timestamptz
+              - column:
+                  name: modified_by
+                  type: uuid
+              - column:
+                  name: state
+                  type: integer
+                  constraints:
+                    nullable: false
+                    foreignKeyName: ref_account_state
+                    referencedTableName: state
+                    referencedColumnNames: id
+  - changeSet:
+      id: 4
+      author: Lexxy
+      changes:
+        - createTable:
+            tableName: tenants
+            columns:
+              - column:
+                  name: state
+                  type: integer
+                  constraints:
+                    nullable: false
+                    foreignKeyName: ref_state
+                    referencedTableName: state
+                    referencedColumnNames: id
+              - column:
+                  name: email
+                  type: text
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created
+                  type: timestamptz
+                  defaultValueComputed: "now()"
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created_by
+                  type: uuid
+                  constraints:
+                    nullable: false
+              - column:
+                  name: modified
+                  type: timestamptz
+              - column:
+                  name: modified_by
+                  type: uuid
+              - column:
+                  name: name
+                  type: text
+                  constraints:
+                    nullable: false
+              - column:
+                  name: id
+                  type: uuid
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+                    tableName: tenants
