--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -45,3 +45,9 @@ assets = [
     ["target/release/n8w8d", "usr/bin/", "755"],
     ["README.md", "usr/share/doc/n8w8d/README", "644"],
 ]
+
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
