--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,12 +3,12 @@ repos:
     rev: v4.3.0
     hooks:
       - id: check-yaml
-#      - id: end-of-file-fixer
+      #      - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-added-large-files
       - id: check-toml
       - id: no-commit-to-branch
-        args: [ '--pattern', '^(?!((main|develop)|(((fix|feature)\/[a-z0-9][a-z0-9A-Z\-]{1,30}))$)).*' ]
+        args: [ '--pattern', '^(?!((main|develop)|(fix|feature)\/[a-z0-9][a-z0-9A-Z\-_]{1,30}|(release\/\d\.\d))$).*' ]
   - repo: https://github.com/doublify/pre-commit-rust
     rev: v1.0
     hooks:
