--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,22 +1,33 @@
 version: 2
+
 updates:
-  - package-ecosystem: "cargo"
+  - package-ecosystem: "cargo"  # can also be maven, gradle, gomod
     directory: "/"
     schedule:
       interval: "daily"
+      time: "09:00"
+      timezone: "Europe/Berlin"
     open-pull-requests-limit: 20
+    reviewers: # you can also use assignees
+      - "lexxy23"
     commit-message:
-      prefix: "⬆"
+      prefix: "⬆️"
+    # here you define the labels, if required. You may also omit them to rely on dependabots default values!
+    labels:
+      - "rust"  # you may also use java, rust, go
+      - "dependencies"
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
       day: "sunday" # only when weekly is set!
-      #      time: "18:00"
+      time: "09:00"
       timezone: "Europe/Berlin"
+    reviewers: # you can also use assignees
+      - "lexxy23"
     labels:
       - "githubactions"
       - "updates"
     open-pull-requests-limit: 5
     commit-message:
-      prefix: "⬆"
+      prefix: "🔨"
