--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
 #channel = "nightly-2020-07-10"
-components = [ "rustfmt", "rustc-dev" ]
-targets = [ "x86_64-unknown-linux-gnu" , "x86_64-unknown-linux-musl"]
+components = [ "rustfmt" ]
+targets = [ "x86_64-unknown-linux-gnu" ]
 profile = "minimal"
