--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nachtwacht-cli"
-version = "0.1.1-alpha.6"
+version = "0.1.1-rc.1"
 edition = "2021"
 license = "GPLv3"
 description = "This package contains all the client binaries to run some tests alone without the server."
