--- a/orm/Cargo.toml
+++ b/orm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nachtwacht-orm"
-version = "0.1.1-alpha.6"
+version = "0.1.1-rc.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
