--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,11 +2,17 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
-      - id: check-yaml
-      #      - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
       - id: check-added-large-files
       - id: check-toml
+      - id: check-case-conflict
+      - id: name-tests-test
+      - id: requirements-txt-fixer
+      - id: detect-private-key
+      - id: detect-aws-credentials
+      - id: check-ast
       - id: no-commit-to-branch
         args: [ '--pattern', '^(?!((main|develop)|(fix|feature)\/[a-z0-9][a-z0-9A-Z\-_]{1,30}|(release\/\d\.\d))$).*' ]
   - repo: https://github.com/doublify/pre-commit-rust
