🔖 bump version to 0.2.0

--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "executor"
-version = "0.1.1-rc.1"
+version = "0.2.0"
 edition = "2021"
 license = "GPLv3"
 description="An executor to execute given tests at specific times."
