--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "n8w8d"
-version = "0.1.1-rc.1"
+version = "0.2.0"
 edition = "2021"
 license = "GPLv3"
 description = "A host service to retrieve local health data and send it to N8w8"
