--- a/checks/Cargo.toml
+++ b/checks/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nachtwacht-checks"
-version = "0.1.1-rc.1"
+version = "0.2.0"
 edition = "2021"
 license = "GPLv3"
 description = "This package contains the implementations for all tests."
