--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -9,6 +9,7 @@ description = "A host service to retrieve local health data and send it to N8w8"
 
 [dependencies]
 nachtwacht-models = { path = "../models" }
+nachtwacht-core = { path = "../core" }
 log = "0.4.17"
 clap = { version = "4.0.15", features = ["derive"] }
 http_req = "0.8.1"
