🚧 set gpl3 pattern if unknown

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -3,11 +3,31 @@ header:
     spdx-id:  GPL-3.0-or-later
     copyright-owner: Dirk Strauss
     software-name: Nachtwacht
+    content: | # <5>
+      Nachtwacht - A set of servers and client tools to monitor servers and services
+      Copyright (C) 2022  Dirk Strauss
+
+      This program is free software: you can redistribute it and/or modify
+      it under the terms of the GNU General Public License as published by
+      the Free Software Foundation, either version 3 of the License, or
+      (at your option) any later version.
+
+      This program is distributed in the hope that it will be useful,
+      but WITHOUT ANY WARRANTY; without even the implied warranty of
+      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+      GNU General Public License for more details.
+
+      You should have received a copy of the GNU General Public License
+      along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
   paths-ignore:
     - 'dist'
     - 'licenses'
+    - '**/*.toml'
+    - '**/Cargo.lock'
+    - '**/*.spec'
     - '**/target'
+    - '**/*.sh'
     - '**/*.md'
     - '**/*.adoc'
     - '**/*.proto'
@@ -18,6 +38,9 @@ header:
     - 'NOTICE'
     - '.github'
     - '**/.*'
+    - '.*'
+    - '**/Containerfile'
+    - '**/CHANGELOG'
 
   comment: on-failure
 
