📄 add license check

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,9 @@ include:
       - '/templates/build-rust.yaml'
       - '/templates/deploy-adoc.yaml'
       - '/templates/deploy-azure.yaml'
+      - '/templates/check-license.yaml'
+      - 'templates/generate-sbom.yaml'
+      - 'templates/generate-sbom-cyclonedx.yaml'
   - template: Security/SAST.gitlab-ci.yml
   - template: Security/Dependency-Scanning.gitlab-ci.yml
   - template: Security/Secret-Detection.gitlab-ci.yml
