N8W8-8 Create Prometheus Exporter mode for n8w8d

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .*
 /src/n8w8_capnp.rs
 /src/models/n8w8.rs
-/models/src/n8w8.rs
 /testdb-data
 /out
 
@@ -10,3 +9,15 @@
 
 orm/postgresql.jar
 out
+*.deb
+*.rpm
+*.xml.gz
+*.sqlite.bz2
+repomd.xml
+pubring.kbx
+trustdb.gpg
+*~
+*.asc
+*.key
+*.rev
+/repository/gpg
