--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -18,6 +18,7 @@ daemonize = "0.5.0"
 chrono = "0.4.23"
 sysinfo = "0.28.1"
 thiserror = "1.0.38"
+futures = "0.3.24"
 
 [dev-dependencies]
 env_logger = "0.10.0"
