--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4.17"
 clap = { version = "4.1.6", features = ["derive"] }
 http_req = "0.9.0"
 env_logger = "0.10.0"
+futures = "0.3.24"
 
 [[bin]]
 name="n8w8-http-check"
