--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4.17"
 env_logger = "0.10.0"
 thiserror = "1.0.38"
 clap={version="4.1.6", features=["derive"]}
+futures = "0.3.24"
 
 [dev-dependencies]
 test-log = "0.2.11"
