--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = ["models", "frontend", "cli", "orm", "checks", "executor", "agent", "core", "openmetrics-server"]
+resolver = "2"
 
 [profile.dev]
 opt-level = 0
