--- a/renovate.json
+++ b/renovate.json
@@ -11,8 +11,7 @@
     {
       "description": "Automatically merge minor and patch-level updates",
       "matchUpdateTypes": ["minor", "patch", "digest"],
-      "automerge": true,
-      "automergeType": "branch"
+      "automerge": true
     },
     {
       "matchPackagePatterns": ["eslint"],
