--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,8 @@
     {
       "description": "Automatically merge minor and patch-level updates",
       "matchUpdateTypes": ["minor", "patch", "digest"],
-      "automerge": true
+      "automerge": true,
+      "automergeType": "branch"
     },
     {
       "matchPackagePatterns": ["eslint"],
