--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ include:
       - '/templates/deploy-azure.yaml'
       - '/templates/check-license.yaml'
       - '/templates/generate-sbom-cyclonedx.yaml'
+      - 'templates/deploy-packagecloud.yaml'
   - template: Security/SAST.gitlab-ci.yml
   - template: Security/Dependency-Scanning.gitlab-ci.yml
   - template: Security/Secret-Detection.gitlab-ci.yml
