--- a/.cargo/config
+++ b/.cargo/config
@@ -1,3 +1,3 @@
 [build]
 target-dir = "/tmp/n8w8-rust"
-#target = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
+#target = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
