--- a/checks/Cargo.toml
+++ b/checks/Cargo.toml
@@ -13,3 +13,6 @@ url = "2.4.1"
 nachtwacht-models = { path = "../models" }
 log = "0.4.20"
 base64 = "0.21.5"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
