--- a/.github/workflows/sec-audit.yaml
+++ b/.github/workflows/sec-audit.yaml
@@ -4,8 +4,7 @@ on:
     branches:
       - develop
     paths:
-      - '**/Cargo.toml'
-      - '**/Cargo.lock'
+      - 'Cargo.lock'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
