--- a/checks/Cargo.toml
+++ b/checks/Cargo.toml
@@ -11,8 +11,9 @@ chrono = "0.4.34"
 reqwest = { version = "0.11.24", features = ["blocking"] }
 url = "2.5.0"
 nachtwacht-models = { path = "../models" }
-log = "0.4.21"
+tracing = "0.1.40"
 base64 = "0.21.7"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
