--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,11 +11,11 @@ description = "This package contains all the client binaries to run some tests a
 nachtwacht-checks = { path = "../checks" }
 nachtwacht-models = { path = "../models" }
 nachtwacht-core = { path = "../core" }
-log = "0.4.21"
 clap = { version = "4.5.1", features = ["derive"] }
 http_req = "0.10.2"
-env_logger = "0.11.2"
 futures = "0.3.30"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = "0.1.40"
 
 [[bin]]
 name="n8w8-http-check"
