--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,11 +10,10 @@ description = "This package contains the core methods. Kind of Business logics."
 [dependencies]
 nachtwacht-checks = { path = "../checks" }
 nachtwacht-models = { path = "../models" }
-log = "0.4.21"
-env_logger = "0.11.2"
 thiserror = "1.0.57"
 clap={version="4.5.1", features=["derive"]}
 futures = "0.3.30"
+tracing = "0.1.40"
 
 [dev-dependencies]
-test-log = "0.2.15"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
