--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -10,10 +10,10 @@ description="An executor to execute given tests at specific times."
 [dependencies]
 nachtwacht-checks = { path = "../checks" }
 nachtwacht-models = { path = "../models" }
-log = "0.4.21"
 clap = { version = "4.5.1", features = ["derive"] }
 http_req = "0.10.2"
-env_logger = "0.11.2"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = "0.1.40"
 
 [[bin]]
 name="nachtwacht-executor"
