--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -11,8 +11,8 @@ description = "This is the frontend webapp server to configure and inspect N8w8.
 actix-web = "4.5.1"
 actix-files = "0.6.5"
 actix-session = {version="0.9.0", features=["cookie-session"]}
-log = "0.4.21"
-env_logger = "0.11.2"
 async-stream = "0.3.5"
 prost = "0.12.3"
 protobuf = "3.3.0"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = "0.1.40"
