--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,11 +16,20 @@ http_req = "0.10.2"
 futures = "0.3.30"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing = "0.1.40"
+# kube with rustls is currently not possible due to rustls not being able to use ip addresses as cname! See https://github.com/rustls/rustls/issues/184
+kube = { version = "0.78.0", default-features = false, features = ["runtime", "derive", "client", "openssl-tls"] }
+kube-client = "0.78.0"
+k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
+tokio = { version = "1.21.2", features = ["rt", "macros"] }
 
 [[bin]]
-name="n8w8-http-check"
-path= "src/http-check-bin.rs"
+name = "n8w8-http-check"
+path = "src/http-check-bin.rs"
 
 [[bin]]
-name="n8w8-simple-val"
-path= "src/simple-val-bin.rs"
+name = "n8w8-simple-val"
+path = "src/simple-val-bin.rs"
+
+[[bin]]
+name = "n8w8-k8s-check"
+path = "src/k8s-check-bin.rs"
